@@ -1,5 +1,9 @@
 2016-05-06  Werner Lemberg  <wl@gnu.org>
 
+	* src/ftinspect.cpp (MainGUI::showFont): Fix logic.
+
+2016-05-06  Werner Lemberg  <wl@gnu.org>
+
 	[ftinspect] Simplify code.
 
 	* src/ftinspect.cpp (MainGUI::createConnections,
